# 3D-Model-Viewer

./: CMakeLists.txt  README.md
source/: as5600.c  as5600.h  buttons.c  buttons.h  gpio.c  gpio.h  main.c  ssd1306.c  ssd1306.h
source/model/: model.h  model_data.c  model_data.h  model_data_ball.c  model_data_cup.c  model_data_cylinder.c  model_data_human.c  model_data_lowpolyhuman.c  model_data_torus.c
source/parse/: convert16.cpp  convert16.h  exportc.cpp  exportc.h  main1.cpp  mesh.h  objParser.cpp  objParser.h
source/render/: display.c  display.h  projection.c  projection.h  renderer.c  renderer.h  scarray.c  scarray.h
